@@ -21,6 +21,7 @@ test('AlgoliaSearch client API spec', function(t) {
     'addQueryInBatch',
     'addUserKey',
     'addUserKeyWithValidity',
+    'updateUserKey',
     'clearCache',
     'copyIndex',
     'deleteIndex',
@@ -39,7 +40,9 @@ test('AlgoliaSearch client API spec', function(t) {
     'setUserToken',
     'startQueriesBatch'];
 
-  // Node.js only methods
+  // Node.js only methods, not added conditionnaly because
+  // they are still declared in other environments,
+  // but they will throw
   expectedProperties = expectedProperties.concat([
     'destroy',
     'disableRateLimitForward',
